<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<CheckBox
		android:text="@string/Fresa"
		android:id="@+id/chkBoxCycling"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
	</CheckBox>

	<CheckBox
		android:text="@string/Limon"
		android:id="@+id/chkBoxTeaching"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
	</CheckBox>

	<CheckBox
		android:text="@string/Mango"
		android:id="@+id/chkBoxBlogging"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
	</CheckBox>

	<Button
		android:text="@string/RicosHelados"
		android:id="@+id/button1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:onClick="getHobbyClick">
	</Button>
</LinearLayout>