<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center|center_horizontal|left|right|top"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/MiTextView"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/cComplejos"
    />

 <Button
    android:id="@+id/btnSpinner"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/cmbBox" />
 
 <Button
    android:id="@+id/btnLista"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/lista" />
 


 	
</LinearLayout>